# cuda-reduce

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
prof/prof/: prof.ncu-proj
prof/reduce/: reduce-0.ncu-rep  reduce1.ncu-rep  reduce2.ncu-rep  reduce3.ncu-rep  reduce3_t1024.ncu-rep  reduce3_t512.ncu-rep
src/: CMakeLists.txt  cuda_reduce.cu  cuda_reduce.hh  device_storage.hh  do_reduce.cc  shared_memory.cuh  utils.cc  utils.hh  warp_reduce_sum.cuh
src/cuda_reduce/: cuda_reduce.cuh  cuda_reduce_block_reduce.cu  cuda_reduce_contiguous_addressing.cu  cuda_reduce_cooperative_groups.cu  cuda_reduce_iface.cu  cuda_reduce_interleave_threads.cu  cuda_reduce_last_block_clean.cuh  cuda_reduce_strided_addressing.cu  cuda_reduce_sum_exp2.cu  cuda_reduce_warp_shfl_reduce.cu
src/reduce/: CMakeLists.txt  cpu_reduce.hh  do_reduce.cc  utils.cc
src/reduce/cuda_reduce/: cuda_reduce.cuh  cuda_reduce_cooperative_groups.cu  cuda_reduce_iface.cu
tests/: CMakeLists.txt
tests/micro-arch/: break-recovergence.cu
tests/mma/: mma.cu
